# ros_gazebo_project

./: data.csv  fum6r_new_corsysarm_worldplate_5000_1.000000_1.000000.ikcache  path.csv  plot.csv  plot.py  pose.csv  test.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/motion_planning/lib/motion_planning/: position_subscriber  position_target  waypoints_target
install/motion_planning/share/motion_planning/: package.sh
install/moveit_6r/share/moveit_6r/: .setup_assistant  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/dq_ik_solver/: CMakeLists.txt  package.xml
src/motion_planning/: CMakeLists.txt
src/motion_planning/src/: position_subscriber.cpp  position_target.cpp  waypoints_target.cpp
src/moveit_fum6r/: .setup_assistant  CMakeLists.txt
src/moveit_fum6r/config/: fum6r_new_corsys.srdf  initial_positions.yaml  joint_limits.yaml
src/moveit_fum6r/launch/: move_group.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
src/pidcontrollerpkg/: pose.csv  setup.cfg  setup.py
src/pidcontrollerpkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/pidcontrollerpkg/pidcontrollerpkg/: PSO_CreatModel (1).pyZone.Identifier  PSO_Obs.py  PSO_Obs.pyZone.Identifier  PSO_Plotter.pyZone.Identifier  PidOptAll_V6.py  PidOptAll_V6.pyZone.Identifier  pso.py  pso_algorithm.pyZone.Identifier
src/ros2_control_bringup/: setup.cfg  setup.py
src/ros2_control_bringup/launch/: controller.launch.py
src/ros2_control_bringup/meshes/: 6RL0.stl  6RL1.stl  6RL2.dae  6RL2.stl  6RL3.stl  6RL4.stl  6RL5.stl  6RL6.stl  EndEffector.stl  Table.stl  link_1.dae
src/ros2_control_bringup/sdf/: ball.sdf
src/ros2_control_bringup/urdf/: FUM6R.urdf  fum6r_new_position.urdf
(+895 files in other folders)
